core/kube-system/authentication/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - args:
        - "--cookie-domain=.${CLUSTER_DOMAIN}"
        - "--whitelist-domain=.${CLUSTER_DOMAIN}"
        - "--cookie-secure=true"
        - "--pass-access-token"
        - "--set-basic-auth=false"
        - "--set-authorization-header"

        #set X-Auth-Request-User and X-Auth-Request-Email response headers (useful in Nginx auth_request mode)
        - "--set-xauthrequest"

        #- --cookie-expire=672h
        #- "-cookie-refresh=1h"
        #- --cookie-httponly=true
        #- --request-logging=false

        - "--provider=oidc"
        - "--provider-display-name='Home OpenID Connect'"
        - --email-domain=*
        #- --upstream=file:///dev/null
        - --cookie-secure=false
        - "--proxy-prefix="
        - --http-address=0.0.0.0:4180
        - "--redirect-url=https://ingress-auth.${CLUSTER_DOMAIN}/callback"
        - "--oidc-issuer-url=https://oidc.${CLUSTER_DOMAIN}"
        image: quay.io/pusher/oauth2_proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
spec:
  tls:
  - hosts:
    - ingress-auth.${CLUSTER_DOMAIN}
  
  rules:
  - host: ingress-auth.${CLUSTER_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
